# RAGumentation

./: .env  Makefile  README.md  pyproject.toml
app/: Dockerfile  app.py  requirements.txt
infra/: locals.tf  main.tf  output.tf  provider.tf  terraform.tfvars  variables.tf
lambda/chat_handler/: Dockerfile  chat_handler.py  requirements.txt
lambda/doc_parser/: Dockerfile  doc_parser.py
